istio/system/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: debug-service-histogram-bucket-settings
  namespace: istio-system
spec:
  configPatches:
    - applyTo: BOOTSTRAP
      patch:
        operation: MERGE
        value:
          stats_config:
            histogram_bucket_settings:
              - match:
                  contains: istio
                buckets:
                   - 9
                   - 99
                   - 999
                   - 9999
                   - 99999
